# yap

./: .gitignore  README.md  flake.nix  pyproject.toml
src/yap/: main.py  server.py  xtts_infer.py
src/yap/xtts_streaming/: audio_module.py  config_loader.py  finetune.py  huggingface_utils.py  inference.py  model_manager.py  training_server.py
src/yap/xtts_streaming/utils/: formatter.py  gpt_train.py
src/yap/xtts_streaming/utils/TTS/: tts_fake.py
